sonar kpi enhancement